# plerustax

./: Cargo.toml  LICENSE
src/: main.rs
src/app/: backend.rs  input.rs  message.rs  mod.rs  state.rs  timeline.rs
src/pleroma/: account.rs  api.rs  backend.rs  mod.rs  tweet.rs
src/pleroma/backend/: account.rs  mod.rs  tweet.rs
src/renderer/: mod.rs  terminal.rs  utils.rs
