[package]
name = "plerustax"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
ratatui = "0.29.0"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread", "sync"] }
